[package]
name = "carusbam"
version = "0.1.0"
authors = ["nexos"]
edition = "2018"
readme = "README.md"
description = "Car USB Accessory Mode"

[dependencies]
libusb = "0.3.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'
debug = false
debug-assertions = false

[package.metadata.deb]
depends = "udev"
extended-description = """\
car aa
"""
assets = [
    ["target/x86_64-unknown-linux-gnu/release/carusbam", "usr/bin/", "755"],
    ["udev.rules", "lib/udev/rules.d/99-carusbam.rules", "644"],
    ["README.md", "usr/share/doc/carusbam/", "755"]
]