[package]
name = "carusbam"
version = "0.1.0"
authors = ["nexos"]
edition = "2024"
readme = "README.md"
description = "Car USB Accessory Mode"

[dependencies]
rusb = "0.9.4"
log = { version = "0.4.29", features = ["std", "kv"] }
journal = { git = "https://github.com/nexoscp/systemd.rs.git"} # , path = "../systemd.rs/journal"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
debug = false

[package.metadata.deb]
depends = "udev"
extended-description = """\
car aa
"""
assets = [
    ["target/release/carusbam", "usr/bin/", "755"],
    ["udev.rules", "lib/udev/rules.d/99-carusbam.rules", "644"],
    ["README.md", "usr/share/doc/carusbam/", "755"]
]